--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <title>module2-solution</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     
     <body>
@@ -12,15 +12,15 @@
             <h1>Our Menu</h1>
             <div class="row">
             <div class="col-lg-4 col-md-6">
-                <h2>Chicken</h2>
+                <h2 class="chicken">Chicken</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, molestias, cumque! Odio illum quisquam sint porro exercitationem natus in consectetur blanditiis sunt, dolor aliquam magnam necessitatibus nobis mollitia quo obcaecati!</p>
             </div>
             <div class="col-lg-4 col-md-6">
-                <h2>Beef</h2>
+                <h2 class="beef">Beef</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati.</p>
             </div>
             <div class="col-lg-4 col-md-12">
-                <h2>Sushi</h2>
+                <h2 class="sushi">Sushi</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, consequuntur. Accusamus suscipit soluta expedita, deserunt itaque hic, aperiam, cumque beatae maxime labore consectetur cum aliquid dicta iste cupiditate incidunt quasi.</p>
             </div>
             </div>
