--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="project-name">Coursera-test</h1>
       <h2 class="project-tagline">Coursera test repository</h2>
       <a href="https://github.com/mrgrdsky/coursera-test" class="btn">View on GitHub</a>
-      <a href="https://github.com/mrgrdsky/coursera-test/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/mrgrdsky/coursera-test/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="/module2-solution/index.html" class="btn">Module 2 solution</a>
+      <a href="/module-3-solution/index.html" class="btn">Module 3 solution</a>
     </section>
 
     <section class="main-content">
