--- a/module-3-solution/index.html
+++ b/module-3-solution/index.html
@@ -21,7 +21,7 @@
   <body>
     
 <div id="top"></div>
-<nav id="nav" class="navbar navbar-default navbar-fixed-top">
+<nav id="nav" class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
